fix: add router wrapper and margin-bottom to prevent navbar covering the content

--- a/Frontend/src/app/app.component.scss
+++ b/Frontend/src/app/app.component.scss
@@ -10,6 +10,10 @@ router-outlet{
     display: flex;
     width: 100%;
     height: calc(100% - 110px);
+    margin-bottom: 130px;
+}
+#router-wrapper{
+    padding-left: 20px;
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
     app-navbar{
@@ -18,6 +22,7 @@ router-outlet{
     }
     router-outlet{
         height: calc(100% - 130px);
+        margin-bottom: 150px;
     }
 }
 @media screen and (min-width: 1200px) {
@@ -27,5 +32,6 @@ router-outlet{
     }
     router-outlet{
         height: calc(100% - 130px);
+        margin-bottom: 150px;
     }
 }
